// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree.NodeList > should render with custom content 1`] = `
<div>
  <tree-node-list
    data-tree-node-list="true"
  >
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-node-list>
  
</div>
`;

exports[`Tree.NodeList > should render with custom content 2`] = `
<div>
  <tree-node-list
    class="flex items-center justify-center p-10"
    data-tree-node-list="true"
  >
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-node-list>
  
</div>
`;

exports[`Tree.NodeList > should render with custom props 1`] = `
<div>
  <tree-node-list
    data-label-x=""
    data-tree-empty="xyz"
    data-tree-node-list="true"
  >
    <!---->
    NodeList...
    
    <!---->
  </tree-node-list>
  
</div>
`;

exports[`Tree.NodeList > should render with string content 1`] = `
<div>
  <tree-node-list
    data-tree-node-list="true"
  >
    <!---->
    NodeList...
    
    <!---->
  </tree-node-list>
  
</div>
`;

exports[`Tree.NodeList > should render with string content 2`] = `
<div>
  <tree-node-list
    class="flex items-center justify-center p-10"
    data-tree-node-list="true"
  >
    <!---->
    NodeList...
    
    <!---->
  </tree-node-list>
  
</div>
`;
